# puresign

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
src/puresign/: logger.py  main.py  ocr.py  processor.py  test.html
