[project]
name = "puresign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.90",
    "python-multipart>=0.0.22",
    "ruff>=0.14.14",
]
