[project]
name = "puresign"
version = "0.1.0"
description = "Specialized image processing services for extracting handwritten signatures and text"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.90",
    "python-multipart>=0.0.22",
]

[project.scripts]
puresign-server = "puresign.main:main"

[build-system]
requires = ["uv_build>=0.5.0"]
build-backend = "uv_build"

[dependency-groups]
type_check = ["ty"]
lint = ["ruff"]
dev = [
    "commitizen>=4.12.1",
    "poethepoet>=0.40.0",
    "pre-commit>=4.5.1",
]

[tool.uv]
default-groups = ["lint", "type_check", "dev"]

[tool.poe.tasks]
setup = [
    { cmd = "pre-commit install" },
    { cmd = "pre-commit install --hook-type commit-msg" }
]
dev = "fastapi dev src/puresign/main.py --port 8008"
start = "python -m puresign.main"
build = "uv build"
format = "ruff format src"
lint = "ruff check src --fix"
type = "ty check"
check = ["format", "lint", "type"]

[tool.ty.src]
include = ["src"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # ruff
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake-pytest-style
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
extend-ignore = [
    "RUF005",
    "RUF012",
    "RUF001", # 忽略字符串中的全角字符歧义
    "RUF002", # 忽略文档字符串中的全角字符歧义
    "RUF003", # 忽略注释中的全角字符歧义
]
unfixable = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
